--- a/index.tex
+++ b/index.tex
@@ -19,7 +19,7 @@
 %	DOCUMENT CONFIGURATIONS AND INFORMATION
 %----------------------------------------------------------------------------------------
 
-\documentclass[oneside,17pt]{memoir} % Font size
+\documentclass[oneside,16pt]{memoir} % Font size
 
 \input{structure.tex} % Include the file that specifies the document structure and layout
 
@@ -55,10 +55,12 @@
 
 % \tableofcontents % Prints the table of contents
 
-% \input{chapters/sinopse.tex}
+\input{chapters/sinopse.tex}
 
 \foreach \chapternumber in {0,...,44}{
 	\input{chapters/chapter\chapternumber.tex}
 } 
+
+\input{chapters/nota_autor.tex}
 
 \end{document}
