--- a/structure.tex
+++ b/structure.tex
@@ -32,6 +32,9 @@
 
 \usepackage[unicode=true,bookmarks=true,bookmarksnumbered=false,bookmarksopen=false,breaklinks=false,pdfborder={0 0 1},backref=section,colorlinks=false]{hyperref} % PDF meta-information specification
 
+\usepackage{tikz}
+\usepackage{tikzpagenodes}
+
 %----------------------------------------------------------------------------------------
 %	PAPER, MARGIN AND HEADER/FOOTER SIZES
 %----------------------------------------------------------------------------------------
