--- a/structure.tex
+++ b/structure.tex
@@ -36,7 +36,8 @@
 \usepackage{tikz}
 \usepackage{tikzpagenodes}
 
-% \newcommand{\useChapters}{true}
+\newcommand{\useChapters}{true}
+
 
 %----------------------------------------------------------------------------------------
 %	PAPER, MARGIN AND HEADER/FOOTER SIZES
